# irys

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  KZG_PROOFS.md  MAINNET_BETA.md  README.md  SETUP.md  _typos.toml  data.js  ecosystem.config.js  index.html  rust-toolchain.toml  rustfmt.toml
crates/api-client/: Cargo.toml
crates/api-client/proptest-regressions/: lib.txt
crates/api-client/src/: ext.rs  lib.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: conventions.rs  error.rs  lib.rs  metrics.rs  trace.rs
crates/api-server/src/routes/: anchor.rs  balance.rs  block.rs  block_index.rs  block_tree.rs  chain.rs  commitment.rs  commitment_state.rs  config.rs  full_config.rs  get_chunk.rs  index.rs  ledger.rs  mempool.rs  miner.rs  mining.rs  mod.rs  network_config.rs  observability.rs  pd_pricing.rs  peer_list.rs  post_block.rs  post_chunk.rs  post_version.rs  price.rs  proxy.rs  storage.rs  supply.rs  tip.rs  tx.rs
crates/api-server/src/utils/: address.rs
crates/c/: Cargo.toml
crates/c/c_src/: capacity.c  capacity.h  capacity_cuda.cu  capacity_cuda.h  capacity_hip.hip  capacity_single.c  sha256.cuh  types.h  vdf.cpp
crates/c/src/: capacity.rs  capacity_cuda.rs  capacity_single.rs  lib.rs  nvidia_gpu_config.rs
crates/chain/: Cargo.toml  build.rs
crates/chain-tests/: Cargo.toml
crates/chain-tests/src/: lib.rs  utils.rs
crates/chain-tests/src/api/: api.rs  client.rs  commitment_anchor_window.rs  epoch_partition_assignments_endpoint.rs  external_api.rs  hardfork_tests.rs  ledger_offset_endpoint.rs  mempool_txs.rs  mod.rs  partition_intervals_endpoint.rs  pd_pricing_endpoint.rs  pricing_endpoint.rs  supply_endpoint.rs  tx.rs  tx_commitments.rs  tx_duplicates.rs
crates/chain-tests/src/block_production/: mod.rs  (+14 more)
crates/chain/src/: arbiter_handle.rs  chain.rs  clonable_join_handle.rs  genesis_builder.rs  genesis_utilities.rs  lib.rs  main.rs  metrics.rs  partitions.rs  peer_utilities.rs  utils.rs  vdf.rs  vdf_seed_source.rs
crates/chain/tests/: data_promotion_test.rs  external_tx.rs  genesis_builder_tests.rs  irys_blockprod.rs  mod.rs  utils.rs
crates/cli/: Cargo.toml
crates/cli/proptest-regressions/: main.txt
crates/cli/src/: cli_args.rs  commands.rs  db_utils.rs  main.rs  snapshot_output.rs  tests.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  submodules.rs
crates/config/templates/: mainnet_config.toml  testnet_config.toml
crates/domain/: Cargo.toml
crates/domain/benches/: block_tree_bench.rs
crates/domain/src/: domain_test_utils.rs  hardfork_ext.rs  lib.rs
crates/domain/tests/: block_index_db_schema_tests.rs  epoch_replay_tests.rs  storage_module_index_tests.rs
crates/efficient-sampling/: Cargo.toml
crates/efficient-sampling/benches/: recall_range.rs  sampling_bench.rs
crates/efficient-sampling/src/: lib.rs
crates/ema-service/: Cargo.toml
crates/ema-service/src/: lib.rs
crates/gossip-service/: Cargo.toml
crates/gossip-service/src/: block_pool_service.rs  cache.rs  client.rs  lib.rs  peer_list_provider.rs  peer_list_service.rs  server.rs  server_data_handler.rs  service.rs  types.rs
crates/gossip-service/tests/: block_pool.rs  mod.rs  util.rs
crates/irys-reth/: Cargo.toml
crates/irys-reth/benches/: shadow_tx_bench.rs
crates/irys-reth/src/: chainspec.rs  constants.rs  engine.rs  evm.rs  lib.rs  mempool.rs  payload.rs  payload_builder_builder.rs  payload_service_builder.rs  pd_policy.rs  pd_tx.rs  precompile.rs  shadow_tx.rs  system_tx.rs  system_tx_validator.rs  validator.rs
crates/irys-reth/tests/: pd_context_isolation.rs  pd_gas_elimination.rs
crates/macros/diag-slow/: Cargo.toml
crates/macros/integer-tagged/: Cargo.toml
crates/p2p/: Cargo.toml
crates/p2p/benches/: p2p_bench.rs
crates/p2p/proptest-regressions/: gossip_client.txt
crates/p2p/src/: block_pool.rs  block_pool_service.rs  block_status_provider.rs  cache.rs  chain_sync.rs  circuit_breaker.rs  dedup_cache.rs  execution_payload_provider.rs  gossip_client.rs  gossip_data_handler.rs  gossip_fixture_tests.rs  gossip_service.rs  lib.rs  metrics.rs  pd_chunk_fetcher.rs  peer_list.rs  peer_list_service.rs  peer_network_service.rs  rate_limiting.rs  server.rs  server_data_handler.rs  sync.rs  types.rs  vdf_utils.rs
crates/packing/: Cargo.toml
crates/packing-worker/: Cargo.toml
crates/packing-worker/src/: api.rs  config.rs  main.rs  packing.rs  types.rs  worker.rs
crates/packing/benches/: packing_bench.rs
crates/packing/src/: bench.rs  cuda_config.rs  lib.rs
crates/price-oracle/: Cargo.toml
crates/price-oracle/proptest-regressions/: coinmarketcap.txt
crates/price-oracle/src/: coingecko.rs  coinmarketcap.rs  lib.rs  mock_oracle.rs
crates/reth-node-bridge/: Cargo.toml
crates/reth-node-bridge/OLD/: lib.rs
crates/reth-node-bridge/src/: adapter.rs  dump.rs  ext.rs  genesis.json  genesis.rs  launcher.rs  launcher2.rs  lib.rs  node.rs  p2p.rs  rpc.rs  signal.rs  snapshot.rs  unwind.rs
crates/reward-curve/: Cargo.toml
crates/reward-curve/benches/: reward_bench.rs
crates/reward-curve/src/: lib.rs  main.rs
crates/storage/: Cargo.toml
crates/storage/src/: chunk_provider.rs  interval_test.rs  irys_consensus_data_db.rs  lib.rs  main.rs  partition.rs  partition_provider.rs  provider.rs  recovered_mempool_state.rs  reth_provider.rs  storage_module.rs  storage_provider.rs
crates/storage/tests/: storage_module_index_tests.rs
crates/stress-test/: Cargo.toml
crates/stress-test/src/: cluster.rs  main.rs
crates/tooling/multiversion-tests/: Cargo.toml  README.md
crates/tui/: Cargo.toml  tui.toml.example
crates/tui/src/: error.rs  lib.rs  types.rs
crates/utils/debug-utils/: Cargo.toml
crates/utils/nextest-monitor/: Cargo.toml  README.md
crates/utils/testing-utils/: Cargo.toml
crates/vdf/: Cargo.toml
crates/vdf/benches/: vdf_bench.rs
crates/vdf/proptest-regressions/: state.txt
crates/vdf/src/: lib.rs  metrics.rs  reset_seed.rs  state.rs  vdf.rs  vdf_state.rs  vdf_utils.rs  verify.rs
crates/vdf/tests/: trybuild.rs
xtask/: Cargo.toml
xtask/src/: failures.rs  flaky.rs  lib.rs  main.rs  util.rs
(+1864 files in other folders)
