[workspace]
exclude = ["ext/"]
members = [
  "crates/actors",
  "crates/c",
  "crates/chain",
  "crates/primitives",
  "crates/reth-node-bridge",
  "crates/types",
  "crates/packing",
  "crates/database",
  "crates/storage",
  "crates/testing-utils",
  "crates/config",
  "crates/efficient-sampling",
  "crates/macros",
  "crates/debug-utils",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
# Irys
irys-macros = { path = "./crates/macros" }
irys-database = { path = "./crates/database" }
irys-actors = { path = "./crates/actors" }
irys-api-server = { path = "./crates/api-server" }
irys-c = { path = "./crates/c" }
irys-primitives = { path = "./crates/primitives" }
irys-config = { path = "./crates/config" }
irys-reth-node-bridge = { path = "./crates/reth-node-bridge" }
irys-types = { path = "./crates/types" }
irys-storage = { path = "./crates/storage" }
irys-testing-utils = { path = "./crates/testing-utils" }
irys-packing = { path = "./crates/packing" }
irys-chain = { path = "./crates/chain" }
irys-vdf = { path = "./crates/vdf" }
irys-efficient-sampling = { path = "./crates/efficient-sampling" }
#

ruint = { version = "1.12.3", features = ["alloc", "arbitrary"] }
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-http = "3.9.0"
base58 = "0.2.0"
rand = "0.8.5"
hex = "0.4"
base64-url = "2.0.0"

arbitrary = { version = "1.3", features = ["derive"] }
once_cell = "1.19.0"
assert_matches = "1.5.0"
bytes = "1.5"
derive_more = { version = "1", features = ["full"] }
eyre = "0.6"
color-eyre = "0.6.2"
foldhash = { version = "0.1", default-features = false }
itertools = "0.13.0"
futures = "0.3"

nodit = { version = "0.9.2", features = ["serde"] }
modular-bitfield = "0.11.2"
openssl = { version = "0.10.57", features = ["vendored"] }
proptest-derive = "0.5"

alloy-rlp = "0.3"
alloy-core = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
alloy-primitives = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef", features = ["arbitrary"] }
alloy-sol-macro = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef", features = ["json"] }
alloy-sol-types = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }

alloy-rpc-types = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-engine = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a", features = ["serde"] }
alloy-consensus = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a", default-features = false }
alloy-eips = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a", default-features = false }
alloy-genesis = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a", default-features = false }
alloy-rpc-types-trace = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-serde = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a", default-features = false }
alloy-signer-local = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-contract = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-provider = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a", features = ["trace-api"] }
alloy-network = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-signer = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }

reth = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-e2e-test-utils = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-auto-seal-consensus = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-beacon-consensus = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-blockchain-tree = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-chainspec = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-cli = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-cli-commands = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-cli-runner = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-cli-util = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-codecs = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-codecs-derive = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-consensus = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-config = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-static-file = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-prune = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-stages = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-evm = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-downloaders = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-consensus-debug-client = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-db = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-db-api = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-db-models = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-engine-service = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-engine-tree = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-engine-util = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-ethereum-cli = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-ethereum-engine-primitives = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-exex = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-network = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-network-peers = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-network-api = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-node-api = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-node-builder = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-node-core = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-node-ethereum = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-node-events = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-node-metrics = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-payload-primitives = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-primitives = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-provider = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-rpc-engine-api = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-rpc-eth-types = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-tasks = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-tokio-util = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-tracing = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-rpc-types-compat = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-transaction-pool = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-stages-types = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-payload-builder = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }
reth-rpc-layer = { git = "https://github.com/Irys-xyz/reth.git", rev = "ab456bea" }

revm = { git = "https://github.com/Irys-xyz/revm.git", rev = "6cdb38c", features = ["std", "serde-json"] }
revm-primitives = { git = "https://github.com/Irys-xyz/revm.git", rev = "6cdb38c" }

rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", default-features = false }
serde_json = "1"
test-fuzz = "6"
thiserror = "1.0"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
toml = "0.8"
derive-syn-parse = "0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }
tempfile = "3.10"
jsonrpsee = "0.24"
jsonrpsee-core = "0.24"
jsonrpsee-http-client = "0.24"
jsonrpsee-types = "0.24"
futures-util = "0.3.30"

[patch.crates-io]
revm = { git = "https://github.com/Irys-xyz/revm.git", rev = "6cdb38c" }
revm-primitives = { git = "https://github.com/Irys-xyz/revm.git", rev = "6cdb38c" }

# alloy
alloy-consensus = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-contract = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-eips = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-genesis = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-json-rpc = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-network = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-network-primitives = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-provider = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-pubsub = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-client = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-admin = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-anvil = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-beacon = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-debug = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-engine = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-eth = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-mev = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-trace = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-rpc-types-txpool = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-serde = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-signer = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-signer-local = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-transport = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-transport-http = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }
alloy-transport-ws = { git = "https://github.com/Irys-xyz/alloy.git", rev = "104782340a" }

# alloy-core
alloy-core = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
alloy-dyn-abi = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
alloy-json-abi = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
alloy-primitives = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
alloy-sol-macro = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
alloy-sol-macro-expander = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
alloy-sol-macro-input = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
alloy-sol-type-parser = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
alloy-sol-types = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }
syn-solidity = { git = "https://github.com/Irys-xyz/alloy-core.git", rev = "e6759579cef" }

[profile.dev]
panic = "unwind"

[workspace.lints]
rust.missing_debug_implementations = "warn"
# rust.missing_docs = "warn" # disable for now until we can fix all the warnings
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
# rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
if_not_else = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"
