[workspace]
members = [
  "crates/actors",
  "crates/c",
  "crates/chain",
  "crates/primitives",
  "crates/reth-node-bridge",
  "crates/types",
  "crates/packing",
  "crates/database",
  "crates/storage",
  "crates/testing-utils",
  "crates/config",
  "crates/efficient-sampling",
  "crates/macros",
  "crates/debug-utils",
  "xtask",
  "crates/price-oracle",
  "crates/cli",
  "crates/p2p",
  "crates/api-client",
  "crates/reward-curve",
  "crates/irys-reth",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.86"
homepage = "http://irys.xyz/"
license = "MIT/Apache-2.0"
repository = "https://github.com/Irys-xyz/irys"
authors = []

[workspace.dependencies]
# Irys
irys-macros = { path = "./crates/macros" }
irys-database = { path = "./crates/database" }
irys-actors = { path = "./crates/actors" }
irys-api-server = { path = "./crates/api-server" }
irys-api-client = { path = "./crates/api-client" }
irys-c = { path = "./crates/c" }
irys-primitives = { path = "./crates/primitives" }
irys-config = { path = "./crates/config" }
irys-reth-node-bridge = { path = "./crates/reth-node-bridge" }
irys-types = { path = "./crates/types" }
irys-storage = { path = "./crates/storage" }
irys-testing-utils = { path = "./crates/testing-utils" }
irys-packing = { path = "./crates/packing" }
irys-chain = { path = "./crates/chain" }
irys-vdf = { path = "./crates/vdf" }
irys-reward-curve = { path = "./crates/reward-curve" }
irys-efficient-sampling = { path = "./crates/efficient-sampling" }
irys-price-oracle = { path = "./crates/price-oracle" }
irys-p2p = { path = "./crates/p2p" }
irys-reth = { path = "./crates/irys-reth" }

ruint = { version = "1.12.3", features = ["alloc", "arbitrary"] }
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-http = "3.9.0"
awc = "3.5.1"
base58 = "0.2.0"
tokio-stream = "0.1"
rand = "0.8"
hex = "0.4"
base64-url = "2"
clap = { version = "4", features = ["derive"] }
arbitrary = { version = "1.3", features = ["derive"] }
rstest = "0.25"
once_cell = "1"
assert_matches = "1"
bytes = "1.5"
derive_more = { version = "1", features = ["full"] }
eyre = "0.6"
color-eyre = "0.6"
itertools = "0.13"
futures = "0.3"
bytemuck = "1"
futures-concurrency = "7"
test-log = { version = "0.2", features = ["trace"] }
pretty_assertions = "1"
nodit = { version = "0.9", features = ["serde"] }
modular-bitfield = "0.11"
openssl = { version = "0.10", features = ["vendored"] }
proptest-derive = "0.5"
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", default-features = false }
serde_json = "1"
test-fuzz = "6"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.8"
derive-syn-parse = "0"
proc-macro2 = "1"
quote = "1"
semver = "1.0"
syn = { version = "2", features = ["full"] }
tracing = "0.1.0"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
  "ansi",
] }
tempfile = "3"
csv = "1"
jsonrpsee = "0.24"
jsonrpsee-core = "0.24"
jsonrpsee-http-client = "0.24"
jsonrpsee-types = "0.24"
futures-util = "0.3"

# reth & alloy deps
alloy-dyn-abi = "1.1.0"
alloy-evm = { version = "0.7.1", default-features = false }
alloy-primitives = { version = "1.1.0", default-features = false, features = [
  "map-foldhash",
  "arbitrary",
] }
alloy-rlp = { version = "0.3.10", default-features = false, features = [
  "core-net",
] }
alloy-consensus = { version = "0.15.10", default-features = false }
alloy-eips = { version = "0.15.10", default-features = false }
alloy-genesis = { version = "0.15.10", default-features = false }

alloy-network = { version = "0.15.10", default-features = false }
alloy-rpc-types = { version = "0.15.10", features = [
  "eth",
], default-features = false }
alloy-rpc-types-eth = { version = "0.15.10", default-features = false }

reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "a411d9334eeaec55" }

revm = { version = "23.1.0", default-features = false }

[profile.dev]
panic = "unwind"

[workspace.lints]
rust.missing_debug_implementations = "warn"
# rust.missing_docs = "warn" # disable for now until we can fix all the warnings
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.unused_imports = "warn"
# rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.lints.clippy]
cargo = { priority = -1, level = "warn" }
complexity = { priority = -2, level = "warn" }
perf = { priority = -3, level = "warn" }
correctness = { priority = -4, level = "warn" }
restriction = { priority = -5, level = "warn" }
style = { priority = -6, level = "warn" }
suspicious = { priority = -7, level = "warn" }
pedantic = { priority = -8, level = "warn" }
nursery = { priority = -9, level = "warn" }

cargo_common_metadata = "allow"
pattern_type_mismatch = "allow"
missing_docs_in_private_items = "allow"
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
dbg_macro = "allow"
single_call_fn = "allow"
missing_inline_in_public_items = "allow"
question_mark_used = "allow"
absolute_paths = "allow"
missing_trait_methods = "allow"
wildcard_imports = "allow"
shadow_reuse = "allow"
exhaustive_enums = "allow"
ref_patterns = "allow"
pub_use = "allow"
single_char_lifetime_names = "allow"
multiple_crate_versions = "allow"
exhaustive_structs = "allow"
separated_literal_suffix = "allow"
mod_module_files = "allow"
negative_feature_names = "allow"
std_instead_of_alloc = "allow"
expect_used = "allow"
pub_with_shorthand = "allow"
option_if_let_else = "allow"
self_named_module_files = "allow"
shadow_unrelated = "allow"
arbitrary_source_item_ordering = "allow"

# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
if_not_else = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

[workspace.metadata.cargo-machete]
ignored = ["modular-bitfield", "test-fuzz"]

# https://github.com/crate-ci/typos/blob/master/docs/reference.md
[workspace.metadata.typos]
default.extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",                      # disable a single line: spellchecker:disable-line
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on", # disable blocks of lines: spellchecker:<on|off>
]
files.extend-exclude = ["ext/*", "fixtures/*"]
